--- a/layouts/shortcodes/home/collections.html
+++ b/layouts/shortcodes/home/collections.html
@@ -13,8 +13,9 @@
         {{ $galaxy := .galaxy | markdownify -}}
         {{ $example := .example | markdownify -}}
         <div class="col-4">
-          <img class="o-feature__icon" src="{{ $icon }}" alt="{{ .title }}" width="120" height="60" feature icon>
-          <h4 class="my-3">{{ $title }}</h4>
+          <img class="o-feature__icon" src="{{ $icon }}" alt="{{ .title }}" width="135" height="70" feature icon>
+          <!-- <h4 class="my-3">{{ $title }}</h4> -->
+          <br><br>
           <p class="section-text">{{ $desc }}</p>
             <div class="row">
               <div class="col">
@@ -34,7 +35,7 @@
                 <p> Examples </p>
               </div>
             </div>
-            <br><br>
+            <br><br><br>
         </div>
         {{ end }}
     </div>
