Update the api keys and index name for docsearch

--- a/layouts/partials/hooks/body-end.html
+++ b/layouts/partials/hooks/body-end.html
@@ -4,17 +4,17 @@
 
 docsearch({
         container: '#docsearch',
-        apiKey: '8f00bedce617267ab6ebadfbe5740c30',
-        appId: 'O0WFPIPWJ1',
-        indexName: 'staging-ansiblemiddleware',
+        apiKey: '8f474f35447885b00436d11c36ac8acd',
+        appId: 'TJZOXFPOHF',
+        indexName: 'ansiblemiddleware',
 });
 
 for (const e of document.querySelectorAll(".docsearch-placeholder")) {
         docsearch({
                 container: e,
-                apiKey: '8f00bedce617267ab6ebadfbe5740c30',
-                appId: 'O0WFPIPWJ1',
-                indexName: 'staging-ansiblemiddleware',
+                apiKey: '8f474f35447885b00436d11c36ac8acd',
+                appId: 'TJZOXFPOHF',
+                indexName: 'ansiblemiddleware',
         });
 }
 
