--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -116,8 +116,8 @@ const containers = ['#docsearch-0', '#docsearch-1'];
 for (let c of containers) {
   docsearch({
     container: c,
-    appId: {{ .appId | default "R2IYF7ETH7" }},
-    apiKey: {{ .apiKey | default "599cec31baffa4868cae4e79f180729b" }},
+    appId: {{ .appId | default "TJZOXFPOHF" }},
+    apiKey: {{ .apiKey | default "8f474f35447885b00436d11c36ac8acd" }},
     indexName: {{ .indexName | default "docsearch" }},
   });
 }
